# SocialAuthAppSkeleton

./: .gitignore  LICENSE.txt  README.md  dist.env  main.py  pyproject.toml
